--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -4,12 +4,21 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "start-web": "webpack-dev-server --open"
   },
   "dependencies": {
-    "react": "~15.4.0-rc.4",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-1": "^6.22.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-native": "0.40.0",
-    "react-native-modal-picker": "mikaello/react-native-modal-picker#master"
+    "react-native-modal-picker": "mikaello/react-native-modal-picker#master",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
