feat: play, pause and slider control

--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -13,10 +13,15 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.22.0",
+    "file-loader": "^0.10.1",
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "^0.0.5-beta.2",
+    "less": "^2.7.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-native": "0.40.0",
     "react-native-modal-picker": "mikaello/react-native-modal-picker#master",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
