--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -17,6 +17,7 @@
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "^0.0.5-beta.2",
     "less": "^2.7.2",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-native": "0.40.0",
