--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "start-web": "webpack-dev-server --open"
+    "start-web": "webpack-dev-server --open",
+    "build-web": "webpack"
   },
   "dependencies": {
     "babel-core": "^6.23.1",
